# iot-reference-esp32

./: .gitignore  .gitmodules  AWSSetup.md  CHANGELOG.md  CMakeLists.txt  COMMANDS.md  GettingStartedGuide.md  KELSUS-CAMP-2024.md  KELSUS-CAMP.md  KNOWN_ISSUES.md  LICENSE  README.md  SecurityGuide.md  UseSecurityFeatures.md  manifest.yml  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/: .cSpellWords.txt  CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  release.yml  test_builds.yml
components/FreeRTOS-Libraries-Integration-Tests/: CMakeLists.txt
components/FreeRTOS-Libraries-Integration-Tests/config/: qualification_wrapper_config.h  test_execution_config.h  test_param_config.h
components/FreeRTOS-Libraries-Integration-Tests/port/: platform_function.c
components/esp_secure_cert_mgr/: CMakeLists.txt  Kconfig  README.md
components/esp_secure_cert_mgr/examples/esp_secure_cert_sample_app/: CMakeLists.txt  README.md  partitions_custflash.csv  partitions_nvs.csv  partitions_pre_prov_nvs.csv  sdkconfig.defaults  sdkconfig.pre_prov_nvs
components/esp_secure_cert_mgr/examples/esp_secure_cert_sample_app/main/: app_main.c
components/esp_secure_cert_mgr/include/: esp_secure_cert_config.h  esp_secure_cert_read.h
components/esp_secure_cert_mgr/srcs/: esp_secure_cert_read.c
components/espressif__esp_secure_cert_mgr/: .component_hash  Changelog.md  idf_component.yml
components/espressif__esp_secure_cert_mgr/docs/: format.md
components/espressif__esp_secure_cert_mgr/examples/esp_secure_cert_app/: sdkconfig.defaults
components/espressif__esp_secure_cert_mgr/examples/esp_secure_cert_app/main/: app_main.c
components/espressif__esp_secure_cert_mgr/private_include/: esp_secure_cert_tlv_config.h
components/espressif__esp_secure_cert_mgr/qemu_test/: README.md  make-qemu-img.sh
components/espressif__esp_secure_cert_mgr/srcs/: esp_secure_cert_read.c  esp_secure_cert_tlv_read.c
components/espressif__esp_secure_cert_mgr/tools/: README.md  configure_esp_secure_cert.py  setup.py
components/espressif__esp_secure_cert_mgr/tools/esp_secure_cert/: configure_ds.py  esp_secure_cert_helper.py  tlv_format.py
components/network_transport/: CMakeLists.txt(disabled)  esp_tls_transport.c  tls_freertos.h
components/qrcode/include/: qrcode.h
components/qrcode/src/: qrcode.c  qrcodegen.c  qrcodegen.h
docs/: INSTALLATION.md  KNOWN-ISSUES.md  KNOWN_ISSUES.md  OTA-SERVICE-ROLE-&-POLICIES.md  USEFUL-COMMANDS.md
idt_config/: dummyPublicKeyAsciiHex.txt
idt_config/windows/: build.bat  config.json  device.json  flash.bat  userdata.json
main/: CMakeLists.txt  Kconfig.projbuild  app_driver.c  app_driver.h  idf_component.yml  main.c  qualification_app_main.c
main/certs/: .gitignore  aws_codesign.crt  bootloader_codesign.key  client.crt  client.key
main/demo_tasks/: defender_demo.c  large_message_sub_pub_demo.c  mqtt-agent-task.c  ota_over_mqtt_demo.c  shadow_demo.c  shadow_device_task.c  shadow_update_task.c  simple_sub_pub_demo.c  temp_sub_pub_demo.c  temperature_sensor_task.c
main/demo_tasks/ota/: ota_over_mqtt_demo.c  ota_over_mqtt_demo.h  ota_over_mqtt_demo_config.h
main/demo_tasks/ota_over_mqtt_demo/: MQTTFileDownloader_config.h  ota_over_mqtt_demo.c  ota_over_mqtt_demo.h  ota_over_mqtt_demo_config.h
main/demo_tasks/sub_pub_unsub_demo/: sub_pub_unsub_demo.c  sub_pub_unsub_demo.h  sub_pub_unsub_demo_config.h
main/demo_tasks/temp_sub_pub_and_led_control_demo/: temp_sub_pub_and_led_control_demo.c  temp_sub_pub_and_led_control_demo.h  temp_sub_pub_and_led_control_demo_config.h
main/demo_tasks/temp_sub_pub_and_led_control_demo/hardware_drivers/: app_driver.c  app_driver.h
main/efuse/: README.md  efuse_table.csv
main/include/: ble_handler.h  common.h  device_id.h  efuse_table.h  firmware_data.h  gap.h  gatt_svc.h  mqtt_handler.h  ota_over_mqtt_demo.h  ota_over_mqtt_demo_config.h  ota_pal.h  ota_state.h  provisioning_state.h  secure_connections.h  utils.h  wifi_handler.h
main/networking/mqtt/: core_mqtt_agent_manager.c  core_mqtt_agent_manager.h  core_mqtt_agent_manager_config.h  core_mqtt_agent_manager_events.c  core_mqtt_agent_manager_events.h  mqtt.c  mqtt.h  subscription_manager.c  subscription_manager.h
main/networking/network_manager/: core_mqtt_agent_events.c  core_mqtt_agent_events.h  core_mqtt_agent_network_manager.c  core_mqtt_agent_network_manager.h  network_manager.c  network_manager.h
main/networking/wifi/: app_wifi.c  app_wifi.h
main/src/: ble_handler.c  device_id.c  efuse_table.c  firmware_data.c  gap.c  gatt_svc.c  mqtt_handler.c  ota_over_mqtt_demo.c  ota_pal.c  provisioning_state.c  secure_connections.c  utils.c  wifi_handler.c
main/tools/: convert_key_to_pem.sh  sign_firmware.py  verify_firmware_signature.py
